sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value i
	for(i<- 1 to i < getNombreValeurs()) 
                     ^